Refactoring, foundation for creations screen

--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -2,7 +2,7 @@
   <div class="flexbox tiny">
     <div>
       <div class="flexbox tiny">
-        <a class="nostyle" [routerLink]="router.get_url('home')">
+        <a class="nostyle" [routerLink]="router.get_url(RouterUrls.home)">
           Recipe4you
         </a>
 
@@ -24,17 +24,22 @@
 
         <a
           class="nostyle"
-          [routerLink]="router.get_url('recipe_create')"
-          title="Create a new recipe"
+          [routerLink]="router.get_url(RouterUrls.recipe_create)"
         >
           <i class="far" aria-hidden="true">&#xf0fe;</i>
         </a>
 
-        <a class="nostyle" [routerLink]="router.get_url('stars')">
+        <a
+          class="nostyle"
+          [routerLink]="router.get_url(RouterUrls.profile_stars)"
+        >
           <i class="fas" aria-hidden="true">&#xf005;</i>
         </a>
 
-        <a class="nostyle" [routerLink]="router.get_url('bookmarks')">
+        <a
+          class="nostyle"
+          [routerLink]="router.get_url(RouterUrls.profile_bookmarks)"
+        >
           <i class="fas" aria-hidden="true">&#xf02e;</i>
         </a>
 
