--- a/src/app/libraries/authentication/components/auth-profile/auth-profile.component.html
+++ b/src/app/libraries/authentication/components/auth-profile/auth-profile.component.html
@@ -51,7 +51,9 @@
 
       <div class="flexbox small resize">
         <button
-          (click)="router.nav('settings'); pop_profile.set(false)"
+          (click)="
+            router.nav(RouterUrls.profile_settings); pop_profile.set(false)
+          "
           [innerHtml]="local.data.settings.buttons.settings"
         ></button>
         <button
