--- a/src/app/components/recipe/recipe-preview/recipe-preview.component.html
+++ b/src/app/components/recipe/recipe-preview/recipe-preview.component.html
@@ -1,4 +1,7 @@
-<a class="nostyle" [routerLink]="router.get_url('recipes', [recipe.id])">
+<a
+  class="nostyle"
+  [routerLink]="router.get_url(RouterUrls.recipes, [recipe.id])"
+>
   <div class="recipe box clickable">
     <div class="text">
       <h2>{{ recipe_data.name }}</h2>
