--- a/src/app/components/recipes/recipes-view/recipes-view.component.html
+++ b/src/app/components/recipes/recipes-view/recipes-view.component.html
@@ -18,7 +18,9 @@
             <a
               *ngIf="auth.is_author_or_admin(recipe.author)"
               class="nostyle"
-              [routerLink]="router.get_url('recipe_delete', [recipe_id])"
+              [routerLink]="
+                router.get_url(RouterUrls.recipe_delete, [recipe_id])
+              "
             >
               <i class="fas" aria-hidden="true">&#xf2ed;</i>
             </a>
@@ -26,7 +28,7 @@
             <a
               *ngIf="auth.is_author_or_admin(recipe.author)"
               class="nostyle"
-              [routerLink]="router.get_url('recipe_edit', [recipe_id])"
+              [routerLink]="router.get_url(RouterUrls.recipe_edit, [recipe_id])"
             >
               <i class="fas" aria-hidden="true">&#xf044;</i>
             </a>
