Finished creations screen, recipes-list now stretch vertically and refactored

--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -24,9 +24,9 @@
 
         <a
           class="nostyle"
-          [routerLink]="router.get_url(RouterUrls.recipe_create)"
+          [routerLink]="router.get_url(RouterUrls.profile_creations)"
         >
-          <i class="far" aria-hidden="true">&#xf0fe;</i>
+          <i class="fas" aria-hidden="true">&#xf0fe;</i>
         </a>
 
         <a
