--- a/src/app/components/recipe/recipe-preview/recipe-preview.component.scss
+++ b/src/app/components/recipe/recipe-preview/recipe-preview.component.scss
@@ -1,4 +1,7 @@
 .recipe {
+  height: 100%;
+  box-sizing: border-box;
+
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -6,16 +9,23 @@
   .text {
     flex-basis: 50%;
     flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    p {
+      margin: 0;
+    }
   }
-  .image {
-    flex-basis: 0;
-    flex-grow: 1;
-    min-width: 15em;
-    max-height: 10em;
-    text-align: right;
-  }
-  img {
-    max-width: 100%;
-    max-height: 100%;
-  }
+  // .image {
+  //   flex-basis: 0;
+  //   flex-grow: 1;
+  //   min-width: 15em;
+  //   max-height: 10em;
+  //   text-align: right;
+  // }
+  // img {
+  //   max-width: 100%;
+  //   max-height: 100%;
+  // }
 }
