Refactored, lang file now according to new routs

--- a/src/app/components/profile/profile-bookmarks/profile-bookmarks.component.html
+++ b/src/app/components/profile/profile-bookmarks/profile-bookmarks.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="box nostyle">
-    <h1 [innerHtml]="local.data.bookmarks.title"></h1>
-    <p [innerHtml]="local.data.bookmarks.desc"></p>
+    <h1 [innerHtml]="local.data.profile.bookmarks.title"></h1>
+    <p [innerHtml]="local.data.profile.bookmarks.desc"></p>
   </div>
 
   <recipes-list [recipes]="recipes" [async]="false"></recipes-list>
