--- a/src/app/components/profile/profile-settings/profile-settings.component.html
+++ b/src/app/components/profile/profile-settings/profile-settings.component.html
@@ -1,12 +1,12 @@
 <div class="box nostyle">
   <section>
-    <h1 [innerHtml]="local.data.settings.title"></h1>
-    <p [innerHtml]="local.data.settings.desc"></p>
+    <h1 [innerHtml]="local.data.profile.settings.title"></h1>
+    <p [innerHtml]="local.data.profile.settings.desc"></p>
   </section>
 
   <section>
-    <h2 [innerHtml]="local.data.settings.sections.lang.title"></h2>
-    <p [innerHtml]="local.data.settings.sections.lang.desc"></p>
+    <h2 [innerHtml]="local.data.profile.settings.sections.lang.title"></h2>
+    <p [innerHtml]="local.data.profile.settings.sections.lang.desc"></p>
 
     <!-- 
       LANGUAGE SELECTOR
@@ -22,8 +22,8 @@
   </section>
 
   <section>
-    <h2 [innerHtml]="local.data.settings.sections.themes.title"></h2>
-    <p [innerHtml]="local.data.settings.sections.themes.desc"></p>
+    <h2 [innerHtml]="local.data.profile.settings.sections.themes.title"></h2>
+    <p [innerHtml]="local.data.profile.settings.sections.themes.desc"></p>
 
     <div class="flexbox resize equal themes">
       <div
