"Add another" ingredient button always in new line

--- a/src/app/components/recipe/recipe-ingredients-list/recipe-ingredients-list.component.html
+++ b/src/app/components/recipe/recipe-ingredients-list/recipe-ingredients-list.component.html
@@ -41,7 +41,7 @@
       </div>
     </div>
 
-    <div>
+    <div class="flex-break">
       <button type="button" id="ingredient-add" (click)="add_ingredient()">
         Add another
       </button>
