--- a/src/app/libraries/share-buttons/components/share-buttons.component.html
+++ b/src/app/libraries/share-buttons/components/share-buttons.component.html
@@ -1,5 +1,5 @@
 <div class="container small">
-  <p [innerHtml]="local.data.lib.share.desc.replace('%nam%', name)"></p>
+  <p [innerHtml]="local.data.lib.share.desc.replaceAll('%nam%', name)"></p>
 
   <!-- SOCIAL BUTTONS -->
   <div>
