--- a/src/SCSS/form.scss
+++ b/src/SCSS/form.scss
@@ -25,6 +25,7 @@ form {
 
     padding: 0 var(--unit-small);
     padding-bottom: var(--unit-tiny);
+    margin: 0 !important;
   }
 
   button[type="submit"] {
