Fixed redirect bug, layout for profile popover

--- a/src/app/libraries/authentication/components/auth-profile/auth-profile.component.html
+++ b/src/app/libraries/authentication/components/auth-profile/auth-profile.component.html
@@ -24,7 +24,7 @@
       </ng-template>
     </div>
 
-    <div class="pop_cnt">
+    <div class="pop_cnt container small">
       <img
         [src]="auth.userPublicData?.photoURL"
         alt="profile"
