--- a/src/app/app/components/menubar/menubar.component.html
+++ b/src/app/app/components/menubar/menubar.component.html
@@ -18,9 +18,9 @@
 
     <div>
       <div class="flexbox tiny">
-        <a id="install" class="nostyle" hidden>
+        <span id="install" class="nostyle clickable" hidden>
           <i class="fas" aria-hidden="true">&#xf019;</i>
-        </a>
+        </span>
 
         <a
           class="nostyle"
