--- a/src/app/app/components/profile/profile-creations/profile-creations.component.html
+++ b/src/app/app/components/profile/profile-creations/profile-creations.component.html
@@ -1,7 +1,7 @@
 <st-content [data-head-path]="local.data.profile.creations">
   <section>
     <a class="nostyle" [routerLink]="router.get_url(RouterUrls.recipe_create)">
-      <section class="box clickable">
+      <section class="box clickable hoverable">
         <h2 [innerHtml]="local.data.profile.creations.new_recipe.title"></h2>
         <p [innerHtml]="local.data.profile.creations.new_recipe.desc"></p>
       </section>
