--- a/src/app/app/components/recipe/recipe-preview/recipe-preview.component.html
+++ b/src/app/app/components/recipe/recipe-preview/recipe-preview.component.html
@@ -2,7 +2,7 @@
   class="nostyle"
   [routerLink]="router.get_url(RouterUrls.recipes, [recipe.id])"
 >
-  <div class="recipe box clickable">
+  <div class="recipe box clickable hoverable">
     <div class="text">
       <h2 [innerHtml]="recipe_data.name"></h2>
 
