--- a/src/app/app/components/recipes/recipes-view/recipes-view.component.html
+++ b/src/app/app/components/recipes/recipes-view/recipes-view.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="loader.finished">
+<div *ngIf="loader.finished()">
   <div *ngIf="recipe; else no_recipe">
     <div class="indent">
       <!-- 
