When adding ingredient focus last name field

--- a/src/app/app/components/profile/profile-settings/profile-settings.component.scss
+++ b/src/app/app/components/profile/profile-settings/profile-settings.component.scss
@@ -8,6 +8,8 @@
       width: 100%;
       max-width: 7.5em;
       aspect-ratio: 1 / 1;
+
+      margin-bottom: var(--unit-small);
     }
 
     > p {
